<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Details</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <string name="title_activity_setting">Settings</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_defaultValue" translatable="false">Kanpur,IN</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No Weather Information Available. The network is not available to fetch Weather Data.</string>
    <string name="empty_forecast_list_server_down">No Weather Information Available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No Weather Information Available. The network is not available to fetch Weather Data.</string>
    <string name="noNetwork">No Weather Information Available. The server is not returning valid data.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_location_error_description">
Invalid Location (
<xliff:g id="location_setting">%1$s</xliff:g>
)"
</string>


    <string name="pref_location_unknown_description">
Validating Location... (
<xliff:g id="location_setting">%1$s</xliff:g>
)"
</string>

    <string name="pref_enable_notifications_true">Enabled</string>

    <string name="pref_enable_notifications_false">Not Enabled</string>

    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_art_pack_label">Icon Pack</string>
    <string name="pref_art_pack_key" translatable="false">art_pack</string>
    <string name="pref_units_key">temperature</string>
    <string name="pref_units_title">Temperature Units</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

    <string name="format_notification">
    Forecast:
    <xliff:g id="condition">%1$s</xliff:g>
    High:
    <xliff:g id="high">%2$s</xliff:g>
    Low:
    <xliff:g id="low">%3$s</xliff:g>

</string>

    <!-- Strings related to Notification preference -->


    <string name="pref_last_notification">last_notification</string>
    <string name="action_map">Map Location</string>
    <string name="weatherTomorrow">Tomorrow</string>
    <string name="weatherToday">Today</string>
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine</string>
    <!-- Value in SharedPreferences for cute dogs art pack  option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>

    <string name="forecastDefault">Clear</string>
    <string name="format_full_friendly_date">

    <xliff:g id="month">%1$s</xliff:g>
    ,
    <xliff:g id="day">%2$s</xliff:g>


</string>
    <!-- Label for the art pack preference [CHAR LIMIT=30] -->


    <!-- Label for Sunshine option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_sunshine">Sunshine</string>
    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
    // TODO: Get the SenderID from the Developer Console


    <!-- Label for cute dogs option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_cute_dogs">Cute dogs</string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>‎"\u00B0"</string>
    <string-array name="pref_units_values">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_units_options">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>


    -<string name="format_wind_mph">

<xliff:g id="speed">%1$1.0f</xliff:g>
mph
<xliff:g id="direction">%2$s</xliff:g>

</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->



    -<string name="format_wind_kmh">

<xliff:g id="speed">%1$1.0f</xliff:g>
km/h
<xliff:g id="direction">%2$s</xliff:g>

</string>



    <!-- Pressure format CHAR LIMIT=25] -->



    <string name="format_pressure">

<xliff:g id="pressure">%1.0f</xliff:g>
hPa
</string>



    <!-- Humidity format CHAR LIMIT=25]-->



    <string name="format_humidity">

<xliff:g id="humidity">%1.0f</xliff:g>
%%
</string>
    <string name="SunshineServie">SunshineService</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>

    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>
    <string name="detail_extras_transition_name" translatable="false">Detail_extras</string>
    <string name="title_widget_today">Sunshine Today</string>

    <string name="title_widget_detail">Sunshine Details</string>
    <string name="condition_2xx">Storm</string>

    <string name="condition_3xx">Drizzle</string>

    <string name="condition_500">Light Rain</string>

    <string name="condition_501">Moderate Rain</string>

    <string name="condition_502">Heavy Rain</string>

    <string name="condition_503">Intense Rain</string>

    <string name="condition_504">Extreme Rain</string>

    <string name="condition_511">Freezing Rain</string>

    <string name="condition_520">Light Shower</string>

    <string name="condition_521">Shower</string>

    <string name="condition_522">Heavy Shower</string>

    <string name="condition_531">Ragged Shower</string>

    <string name="condition_600">Light Snow</string>

    <string name="condition_601">Snow</string>

    <string name="condition_602">Heavy Snow</string>

    <string name="condition_611">Sleet</string>

    <string name="condition_612">Shower Sleet</string>

    <string name="condition_615">Rain and Snow</string>

    <!-- light rain and snow -->


    <string name="condition_616">Rain and Snow</string>

    <string name="condition_620">Shower Snow</string>

    <!-- light shower snow -->


    <string name="condition_621">Shower Snow</string>

    <string name="condition_622">Shower Snow</string>

    <!-- heavy shower snow -->


    <string name="condition_701">Mist</string>

    <string name="condition_711">Smoke</string>

    <string name="condition_721">Haze</string>

    <string name="condition_731">Sand, Dust</string>

    <string name="condition_741">Fog</string>

    <string name="condition_751">Sand</string>

    <string name="condition_761">Dust</string>

    <string name="condition_762">Volcanic Ash</string>

    <string name="condition_771">Squalls</string>

    <string name="condition_781">Tornado</string>

    <string name="condition_800">Clear</string>

    <string name="condition_801">Mostly Clear</string>

    <string name="condition_802">Scattered Clouds</string>

    <string name="condition_803">Broken Clouds</string>

    <string name="condition_804">Overcast Clouds</string>

    <string name="condition_900">Tornado</string>

    <string name="condition_901">Tropical Storm</string>

    <string name="condition_902">Hurricane</string>

    <string name="condition_903">Cold</string>

    <string name="condition_904">Hot</string>

    <string name="condition_905">Windy</string>

    <string name="condition_906">Hail</string>

    <string name="condition_951">Calm</string>

    <string name="condition_952">Light Breeze</string>

    <string name="condition_953">Gentle Breeze</string>

    <string name="condition_954">Breeze</string>

    <!-- moderate breeze -->


    <string name="condition_955">Fresh Breeze</string>
    <string name="muzei_description">Today\'s weather</string>

    <string name="condition_956">Strong Breeze</string>

    <string name="condition_957">High Wind</string>

    <string name="condition_958">Gale</string>

    <string name="condition_959">Severe Gale</string>

    <string name="condition_960">Storm</string>

    <string name="condition_961">Violent Storm</string>

    <string name="condition_962">Hurricane</string>


    -<string name="condition_unknown">
Unknown (
<xliff:g id="low">%1$s</xliff:g>
)
</string>


</resources>
