<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine"

    >


    <com.example.android.sunshine.LocationEditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_defaultValue"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="3"
        >

    </com.example.android.sunshine.LocationEditTextPreference>

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:defaultValue="@string/pref_units_metric"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options"
        />

    <ListPreference android:title="@string/pref_art_pack_label"
        android:defaultValue="@string/pref_art_pack_sunshine"
        android:key="@string/pref_art_pack_key"
        android:entries="@array/pref_art_pack_options"
        android:entryValues="@array/pref_art_pack_values"/>
    <CheckBoxPreference android:title="@string/pref_enable_notifications_label"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:summaryOff="@string/pref_enable_notifications_false"/>


</PreferenceScreen>